k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fishing-app
  labels:
    app.kubernetes.io/name: fishing-app
